# GoodCatDetector

./: README.md
Yolo-Fastest-MNN/: CMakeLists.txt
Yolo-Fastest-MNN/src/: main.cpp  main_test.cpp
conf/: wpa_supplicant.conf
steering_engine/bcm2835-1.68/: Makefile  config.status
steering_engine/bcm2835-1.68/Pan-Tilt_HAT_code/JetsonNano/1_Light_Sensor/python/: TSL2591.py
steering_engine/bcm2835-1.68/Pan-Tilt_HAT_code/RaspberryPi/Light_Sensor/c/: Makefile  main
steering_engine/bcm2835-1.68/Pan-Tilt_HAT_code/RaspberryPi/Light_Sensor/python/: main.py
steering_engine/bcm2835-1.68/Pan-Tilt_HAT_code/RaspberryPi/Servo_Driver/bcm2835/: main
steering_engine/bcm2835-1.68/Pan-Tilt_HAT_code/RaspberryPi/Servo_Driver/python/: main.py
steering_engine/bcm2835-1.68/Pan-Tilt_HAT_code/RaspberryPi/Servo_Driver/wiringPi/: main
steering_engine/bcm2835-1.68/Pan-Tilt_HAT_code/RaspberryPi/test/: main
steering_engine/bcm2835-1.68/Pan-Tilt_HAT_code/RaspberryPi/test/Servo/: PCA9685.c  main.c
steering_engine/bcm2835-1.68/doc/: Makefile
steering_engine/bcm2835-1.68/src/: Makefile  test
tests/: camera_capture.py  camera_live.py  camera_server.py
tests/cpp/: camera_capture_test.cpp  compile_cpp_demo.sh  test
tests/test/: win10_cv_capture.py
tests/test/mnn_python/: mobilenet_demo_2.py
